# aclog

./: .gitignore  AGENTS.md  Cargo.toml
.github/workflows/: ci.yml
openspec/specs/automated-testing/: spec.md
openspec/specs/interactive-sync-selection/: spec.md
openspec/specs/jj-history-as-database/: spec.md
openspec/specs/jj-repository-actor/: spec.md
openspec/specs/multi-provider-problem-sources/: spec.md
openspec/specs/record-browser-workbench/: spec.md
openspec/specs/record-commands/: spec.md
openspec/specs/root-workbench-entry/: spec.md
openspec/specs/stats-command/: spec.md
openspec/specs/sync-delete-flow/: spec.md
openspec/specs/terminal-ui-experience/: spec.md
openspec/specs/training-record-notes/: spec.md
openspec/specs/training-review-suggestions/: spec.md
src/: cli.rs  commit_format.rs  config.rs  lib.rs  main.rs  models.rs  output_style.rs  problem.rs  telemetry.rs  tui.rs  utils.rs  vcs.rs
src/api/: luogu.rs  mod.rs
src/app/: browser.rs  deps.rs  home.rs  init.rs  mod.rs  record_bind.rs  record_edit.rs  record_list.rs  record_rebind.rs  record_show.rs  stats.rs  support.rs  sync.rs
src/domain/: browser.rs  mod.rs  problem.rs  record.rs  record_index.rs  stats.rs  submission.rs  sync_batch.rs  training_fields.rs
src/ui/: interaction.rs  mod.rs
src/vcs/: actor.rs  mod.rs  read.rs  write.rs
tests/: app_home.rs  app_record_bind.rs  app_record_browser.rs  app_record_list.rs  app_record_rebind.rs  app_record_show_edit.rs  app_stats.rs  app_sync.rs  cli_smoke.rs  repo_jj_integration.rs
tests/support/: mod.rs
(+75 files in other folders)
